--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.14.0
   social_login_buttons: ^1.0.7
+  firebase_auth: ^4.6.3
+  google_sign_in: ^6.1.4
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
