--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   social_login_buttons: ^1.0.7
   firebase_auth: ^4.6.3
   google_sign_in: ^6.1.4
+  uuid: ^3.0.7
   cloud_firestore: ^4.8.1
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
