--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   uuid: ^3.0.7
   cloud_firestore: ^4.8.1
   form_field_validator: ^1.1.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
