--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^4.8.1
   form_field_validator: ^1.1.0
   intl: ^0.18.1
+  flutter_local_notifications: ^14.1.1
+  firebase_messaging: ^14.6.3
 
 dev_dependencies:
   flutter_test:
