--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.18.1
   flutter_local_notifications: ^14.1.1
   firebase_messaging: ^14.6.3
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
